@@ -13,3 +13,4 @@ net/if_ppp.h
 net/route.h
 nfs/nfs.h
 siglist.h
+xstatconv.c
